updated post show up with add button in hero image. formatted city show page with bootstrap. removed dc from seed since name is too long. fixed profile image on city show page

--- a/app/assets/stylesheets/cities.scss
+++ b/app/assets/stylesheets/cities.scss
@@ -56,6 +56,14 @@
   color: white;
 }
 
+.add-post {
+  position: absolute;
+  top: 70%;
+  left:43%;
+  text-align: center;
+  font-size: 20px;
+}
+
 .city_home_text {
   position: absolute;
   top: 20%;
@@ -64,4 +72,20 @@
   font-size: 200px;
   text-align: center;
   color: white;
+}
+
+.profile {
+  text-align: center;
+  font-size: 18px;
+}
+p {
+  margin: 5px;
+}
+.post {
+  margin-top: 10px;
+}
+
+.one_post {
+  background-color: gray;
+  border-radius: 20px;
 }
